--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="./customize.css">
   <link rel="stylesheet" href="./webdevelopment.css">
   <link rel="stylesheet" href="./signup.css">
+  <link rel="stylesheet" href="./footer.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
@@ -207,7 +208,47 @@
   </main>
   <footer>
     
-
+    <section id="footer">
+      <div class="container">
+        <div class="footer__wrapper">
+          <div class="footer__item--left">
+            <img src="./PJSTUDIO-landingPage/pj logo.png" alt="Pj Studio Logo">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing<br/> elit. Dolore adipisci ipsam, sunt voluptate laborum<br/> perspiciatis dignissimos.</p>
+          <div class="footer--social">
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-linkedin-in"></i>
+            <i class="fa-brands fa-google-plus-g"></i>
+          </div>
+          </div>
+          
+           <div class="footer__item--links">
+             <div class="footer--resources">
+               <h5>Resourcess</h5>
+               <a href="">Home</a>
+               <a href="">Who We Are</a>
+               <a href="">What We Do</a>
+               <a href="">Projects Delivery</a>
+               <a href="">Our Products</a>
+             </div>
+               <div class="footer--useful">
+              <h5>Useful Links</h5>
+              <a href="">Team</a>
+              <a href="">Blog</a>
+              <a href="">History</a>
+              <a href="">Contact Us</a>
+              <a href="">Locations</a>
+              </div>
+             </div> 
+            <div class="footer__item--newsletter">
+              <h5>NEWSLETTER</h5>
+              <input type="text" placeholder="Enter your email">
+              <button class="btn btn__primary">Subscribe</button>
+           </div> 
+          </div>
+        </div>
+      </div>
+    </section>
 
   </footer>
 
