--- a/index.html
+++ b/index.html
@@ -5,15 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PJ Studio</title>
-  <link rel="stylesheet" href="./layout.css">
-  <link rel="stylesheet" href="./header.css">
-  <link rel="stylesheet" href="./hero.css">
-  <link rel="stylesheet" href="./process.css">
-  <link rel="stylesheet" href="./mobile.css">
-  <link rel="stylesheet" href="./customize.css">
-  <link rel="stylesheet" href="./webdevelopment.css">
-  <link rel="stylesheet" href="./signup.css">
-  <link rel="stylesheet" href="./footer.css">
+  <link rel="stylesheet" href="./style.css/pjstudio.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
@@ -27,7 +19,7 @@
       <nav class="navbar">
 
         <div class="navbar__logo">
-          <img src="./PJSTUDIO-landingPage/pj logo.png" alt="PJ Studio Logo">
+          <img src="./assets/pj logo.png" alt="PJ Studio Logo">
         </div>
 
         <div class="navbar__nav">
@@ -54,7 +46,7 @@
     <section id="hero">
       <div class="container">
         <div class="hero__wrapper">
-          <div class="hero__left--item">
+          <div class="hero__item--left">
               <h1>
                 Web & Mobile <br />
                 Design <br />
@@ -70,8 +62,8 @@
               </div>
           </div>
 
-          <div class="hero__right--item">
-              <img src="./PJSTUDIO-landingPage/hero.png" alt="PJ Studio" />
+          <div class="hero__item--right">
+              <img src="./assets/hero.png" alt="PJ Studio" />
           </div>
 
         </div>
@@ -130,7 +122,7 @@
         <div class="container">
           <div class="mobile__wrapper">
             <div class="mobile__image">
-              <img src="./PJSTUDIO-landingPage/app-design-sample.png" alt="Mobile Image">
+              <img src="./assets/app-design-sample.png" alt="Mobile Image">
             </div>
             <div class="mobile__text">
               <h5>FEATURES</h5>
@@ -150,7 +142,7 @@
         <div class="container">
           <div class="customize__wrapper">
             <div class="customize__image">
-             <img src="./PJSTUDIO-landingPage/accepttasks.svg" alt="Customize Offers Image">
+             <img src="./assets/accepttasks.svg" alt="Customize Offers Image">
             </div>
              <div class="customize__text">
                <div class="customize__text--box customize__text--cms">
@@ -183,7 +175,7 @@
                 </div>
             </div>
             <div class="web-development__image">
-              <img src="./PJSTUDIO-landingPage/laptop.png" alt="Laptop">
+              <img src="./assets/laptop.png" alt="Laptop">
             </div>
           </div>
           
@@ -199,7 +191,7 @@
               <button class="btn btn__primary btn--signup">SIGN UP NOW</button>
             </div>
             <div class="signup__image">
-              <img src="./PJSTUDIO-landingPage/SignUp.png" alt="Sign Up">
+              <img src="./assets/SignUp.png" alt="Sign Up">
             </div>
           </div>
         </div>
@@ -212,7 +204,7 @@
       <div class="container">
         <div class="footer__wrapper">
           <div class="footer__item--left">
-            <img src="./PJSTUDIO-landingPage/pj logo.png" alt="Pj Studio Logo">
+            <img src="./assets/pj logo.png" alt="Pj Studio Logo">
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing<br/> elit. Dolore adipisci ipsam, sunt voluptate laborum<br/> perspiciatis dignissimos.</p>
           <div class="footer--social">
             <i class="fa-brands fa-facebook"></i>
