--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     <section id="mobile">
         <div class="container">
           <div class="mobile__wrapper">
-            <div class="mobile__image">
+            <div class="mobile__img">
               <img src="./assets/app-design-sample.png" alt="Mobile Image">
             </div>
             <div class="mobile__text">
@@ -174,7 +174,7 @@
                   <i class="fa-brands fa-react web-development__react"></i>
                 </div>
             </div>
-            <div class="web-development__image">
+            <div class="web-development__img">
               <img src="./assets/laptop.png" alt="Laptop">
             </div>
           </div>
