--- a/index.html
+++ b/index.html
@@ -125,13 +125,14 @@
     <section id="mobile">
         <div class="container">
           <div class="mobile__wrapper">
+            
             <div class="mobile__img">
               <img src="./assets/app-design-sample.png" alt="Mobile Image">
             </div>
             <div class="mobile__text">
               <h5>FEATURES</h5>
               <h2>Mobile App</h2>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br/> Illum necessitatibus error itaque consectetur, quasi voluptatum quae obcaecati <br> impedit cumque illo.</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum necessitatibus error itaque consectetur, quasi voluptatum quae obcaecati impedit cumque illo.</p>
                 <div class="mobile__icons">
                   <i class="fa-solid fa-compass-drafting mobile__icons--design"></i>
                   <i class="fa-solid fa-table-cells-large mobile__icons--square"></i>
