--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
   
-  <header id="header">
+  <header id="header" class="animate__animated animate__fadeInDown">
     
     <div class="container">
       <!-- navbar -->
@@ -55,13 +55,13 @@
       <div class="container">
         <div class="hero__wrapper">
           <div class="hero__item__left">
-              <h1>
+              <h1 class="animate__animated animate__fadeInDown">
                 Web & Mobile <br />
                 Design <br />
                 Development
               </h1>
-              <p>Helps you to organize your income and expenses.</p>
-              <div class="left__item__demo">
+              <p class="animate__animated animate__fadeInDown animate__delay-1s">Helps you to organize your income and expenses.</p>
+              <div class="left__item__demo animate__animated animate__fadeInDown animate__delay-2s">
                   <button type="button" class="btn btn__primary hero__btn">
                     Try free demo
                     <i class="fa-solid fa-chevron-down"></i>
@@ -70,7 +70,7 @@
               </div>
           </div>
 
-          <div class="hero__item__right">
+          <div class="hero__item__right animate__animated animate__fadeInDown animate__delay-2s"">
               <img src="./assets/hero.png" alt="PJ Studio" />
           </div>
 
