--- a/index.html
+++ b/index.html
@@ -138,8 +138,16 @@
               <h2>Mobile App</h2>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum necessitatibus error itaque consectetur, quasi voluptatum quae obcaecati impedit cumque illo.</p>
                 <div class="mobile__icons">
-                  <i class="fa-solid fa-compass-drafting mobile__icons--design"></i>
-                  <i class="fa-solid fa-table-cells-large mobile__icons--square"></i>
+                  <div class="icons__ui">
+                    <i class="fa-solid fa-compass-drafting mobile__icons--design"></i>
+                    <h3>UI/UX Design</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                  </div>
+                  <div class="icons__native">
+                    <i class="fa-solid fa-table-cells-large mobile__icons--square"></i>
+                    <h3>Native iOS App</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates, doloribus?</p>
+                  </div>
                 </div>
             </div>
           </div>
@@ -171,7 +179,8 @@
         </div>
       </section>
 
-      <section id="web-development" class="animate__animated animate__delay-2s">
+      <section id="web-development" class="animate__animated
+       animate__delay-2s">
         <div class="container">
           <div class="web-development__wrapper">
             <div class="web-development__text">
@@ -179,8 +188,16 @@
               <h2>Web Development</h2>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br/> Illum necessitatibus error itaque consectetur, quasi voluptatum quae obcaecati <br> impedit cumque illo.</p>
                 <div class="web-development__icons">
-                  <i class="fa-regular fa-pen-to-square web-development__ui"></i>
-                  <i class="fa-brands fa-react web-development__react"></i>
+                  <div class="icons__ui">
+                    <i class="fa-regular fa-pen-to-square web-development__ui"></i>
+                    <h3>UI/UX Design</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                  </div>
+                  <div class="icons__react">
+                    <i class="fa-brands fa-react web-development__react"></i>
+                    <h3>React Native</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                  </div>
                 </div>
             </div>
             <div class="web-development__img">
