--- a/index.html
+++ b/index.html
@@ -42,12 +42,25 @@
           <button type="button" class="btn btn__primary">Request a demo</button>
         </div>
 
+        <div class="burger__icon">
+          <i class="fa-solid fa-bars"></i>
+        </div>
+
       </nav>
 
     </div>
 
   </header>
   <main>
+
+    <div class="burger__menu">
+      <ul class="burger__nav">
+        <li class="burger__nav__item"><a class="burger__link" href="">Home</a></li>
+        <li class="burger__nav__item"><a class="burger__link" href="">About Us</a></li>
+        <li class="burger__nav__item"><a class="burger__link" href="">Pricing</a></li>
+        <li class="burger__nav__item"><a class="burger__link" href="">Feedback</a></li>
+      </ul>
+    </div>
 
 
     <!-- hero -->
@@ -158,7 +171,7 @@
       <section id="customize" class="animate__animated animate__delay-1s">
         <div class="container">
           <div class="customize__wrapper">
-            <div class="customize__image">
+            <div class="customize__img">
              <img src="./assets/accepttasks.svg" alt="Customize Offers Image">
             </div>
              <div class="customize__text">
