--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
         <li class="burger__nav__item"><a class="burger__link" href="">Pricing</a></li>
         <li class="burger__nav__item"><a class="burger__link" href="">Feedback</a></li>
       </ul>
+      <button type="button" class="btn btn__primary">Request a demo</button>
     </div>
 
 
